--- a/Cargo.toml
+++ b/Cargo.toml
@@ -9,3 +9,13 @@ edition = "2018"
 [dependencies]
 petgraph = "0.4.13"
 indexmap = "1.1.0"
+num_cpus = "1.10.1"
+crossbeam-utils = "0.6.6"
+
+[[bin]]
+name = "serial"
+path = "src/serial.rs"
+
+[[bin]]
+name = "threads"
+path = "src/threads.rs"
