--- a/Cargo.toml
+++ b/Cargo.toml
@@ -14,6 +14,7 @@ petgraph = "0.4.13"
 indexmap = "1.1.0"
 num_cpus = "1.10.1"
 rayon = "1.2.0"
+scoped_threadpool = "0.1.9"
 
 [[bench]]
 name = "lexbfs_bench"
