--- a/Cargo.toml
+++ b/Cargo.toml
@@ -13,8 +13,9 @@ criterion = "0.3"
 petgraph = "0.4.13"
 indexmap = "1.1.0"
 num_cpus = "1.10.1"
-rayon = "1.2.0"
+rayon = "1.2.1"
 scoped_threadpool = "0.1.9"
+crossbeam = "0.7.3"
 
 [[bench]]
 name = "lexbfs_bench"
